--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <head>
 	<title>Hutton's Sketchpad</title>
-	<link rel="stylesheet" href="css/style.css"
+	<link rel="stylesheet" href="css/style.css" />
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="js/script.js"></script>
 </head>
 <body>
 
+<div id="container">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+
+
+
+
+
+
+</div>
+
+
+
+
+
 </body>
