--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
+
 <body>
-
-<div id="container">
-
-
-
-
-
-
-
-</div>
-
-
-
-
+	<div id="header">
+	<h1>Hutton's jQuery Sketchpad</h1>
+	</div>
+	<div id="options">
+		<button type="button" id="clear">Clear</button>
+		<button type="button" id="redraw">Redraw Grid</button>
+		<button type="button" id="rcg">Random Colors</button>
+		<button type="button" id="opacity">Opacity</button>
+		<button type="button" id="pic">Reveal Picture</button>
+	</div>
+	
+	<div id="container">
+		<table>
+		</table>
+	</div>
 
 </body>
